--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,3 +18,7 @@ mybatis:
         log-impl: org.apache.ibatis.logging.stdout.StdOutImpl # 在控制台打印必要的SQL日志信息
     mapper-locations: classpath:mapper/*.xml
     type-aliases-package: com.gzh.tilas.pojo    # 实体类所在包，不然mybatis找不到员工实体类
+
+Tilas:
+    Employee:
+        defaultPassword: "123456"
