完成了登录功能的开发，实现了基于Spring-Security的登录校验，确保员工管理页面和部门管理页面必须登录后才能访问； 实现了会话跟踪技术，采用jwt令牌，这样每次请求都携带jwt令牌校验身份；

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,3 +22,6 @@ mybatis:
 Tilas:
     Employee:
         defaultPassword: "123456"
+    jwt:
+        secret-key: "gongzihang" # 必须修改为一个复杂且保密的字符串
+        expire-time: 3600000 # Token有效期，单位毫秒 (这里是1小时)
